2014-05-01  Joern Rennecke <joern.rennecke@embecosm.com>

	* include/stdint.h (INT8_C): Also define for __cplusplus >= 201103L.
	If __INT8_C is defined, use GNU C preprocessor builtin-macro
	for the definition.
	(INT16_C INT32_C, INT64_C, UINT8_C, UINT16_C, UINT32_C): Likewise.
	(UINT64_C, INTMAX_C, UINTMAX_C): Likewise.

2014-04-29  Aurelien Jarno  <aurelien@aurel32.net>

	* include/util/setbaud.h: correct typo.

2014-04-29  George Thomas <george.thomas@atmel.com>

	Fix for bug #37103: ATtiny5/9/10/20/40 watchdog can't be enabled
	* include/avr/wdt.h: Add wdt_enable and wdt_disable macros for tiny 4,5,
	9,10,20 and 40 devices.

2014-04-29  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>

	Fix for bug #39049: Clock prescaler set and get are missing for TINY arch
	* include/avr/power.h: Add clock_prescale_set and get function/macro for 
	tiny 4, 5, 9, 10, 20 and 40 devices.

2014-04-29  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>

	Fix for bug #40206: incorrect SP init in startup code for xmegas
	* crt1/gcrt1.S: write to SPL and then SPH for xmega SP initialization

2014-04-28  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Fix for bug #42024: build break regarding avrtiny10
	Submitted by baxelrod@irobot.com
	* libc/misc/itoa.S: Fix typo in avr tiny macro.
	* libc/misc/itoa_ncheck.S: Same.
	* libc/misc/ltoa.S: Same.
	* libc/misc/ltoa_ncheck.S: Same.
	* libc/misc/utoa.S: Same.
	* libc/misc/utoa_ncheck.S: Same.
	* libc/misc/ultoa.S: Same.
	* libc/misc/ultoa_ncheck.S: Same.

2014-04-28  Joey Morin <joeymorin@gmail.com>

	Fix for bug #40003: Integer type promotion leads to inefficent code in wdt.h
	* include/avr/wdt.h (wdt_enable): cast expression to destination type

2014-04-16  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Fix for bug #42084: wrong LFUSE_DEFAULT in iotn84a.h
	Submitted by ralphdoncaster
	* include/avr/iotn84a.h: Update LFUSE_DEFAULT as per datasheet.

2014-04-16  Pitchumani Sivanupandi <pitchumani.s@atmel.com>
